bk_ida/gccida/g2/named_section_flags
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/named_section_flags/src/varasm.c:871:6: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
if ( in_section_0 != in_named || strcmp( name, in_named_name) ) 
     ^~~~~~~~~~~~
     in_section
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/named_section_flags/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/named_section_flags/src/varasm.c:878:1: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
in_section_0 = no_section; 
^~~~~~~~~~~~
in_section
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/named_section_flags/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/named_section_flags/src/varasm.c:883:1: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
in_section_0 = in_named; 
^~~~~~~~~~~~
in_section
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/named_section_flags/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/named_section_flags/src/obj/varasm.o] Error 1
